# cren

./: .gitignore  CMakeLists.txt  README.md  plan.md
src/: CMakeLists.txt  funcs.cpp  funcs.hpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
